// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`statement statement safety net: [10,"comedy"] 1`] = `
"Statement for undefined
 Foo: $330.00 (10 seats)
Amount owed is $330.00
You earned 2 credits
"
`;

exports[`statement statement safety net: [10,"foo"] 1`] = `[Error: unknown type: foo]`;

exports[`statement statement safety net: [10,"tragedy"] 1`] = `
"Statement for undefined
 Foo: $400.00 (10 seats)
Amount owed is $400.00
You earned 0 credits
"
`;

exports[`statement statement safety net: [10,null] 1`] = `[Error: unknown type: null]`;

exports[`statement statement safety net: [20,"comedy"] 1`] = `
"Statement for undefined
 Foo: $360.00 (20 seats)
Amount owed is $360.00
You earned 4 credits
"
`;

exports[`statement statement safety net: [20,"foo"] 1`] = `[Error: unknown type: foo]`;

exports[`statement statement safety net: [20,"tragedy"] 1`] = `
"Statement for undefined
 Foo: $400.00 (20 seats)
Amount owed is $400.00
You earned 0 credits
"
`;

exports[`statement statement safety net: [20,null] 1`] = `[Error: unknown type: null]`;

exports[`statement statement safety net: [21,"comedy"] 1`] = `
"Statement for undefined
 Foo: $468.00 (21 seats)
Amount owed is $468.00
You earned 4 credits
"
`;

exports[`statement statement safety net: [21,"foo"] 1`] = `[Error: unknown type: foo]`;

exports[`statement statement safety net: [21,"tragedy"] 1`] = `
"Statement for undefined
 Foo: $400.00 (21 seats)
Amount owed is $400.00
You earned 0 credits
"
`;

exports[`statement statement safety net: [21,null] 1`] = `[Error: unknown type: null]`;

exports[`statement statement safety net: [29,"comedy"] 1`] = `
"Statement for undefined
 Foo: $532.00 (29 seats)
Amount owed is $532.00
You earned 5 credits
"
`;

exports[`statement statement safety net: [29,"foo"] 1`] = `[Error: unknown type: foo]`;

exports[`statement statement safety net: [29,"tragedy"] 1`] = `
"Statement for undefined
 Foo: $400.00 (29 seats)
Amount owed is $400.00
You earned 0 credits
"
`;

exports[`statement statement safety net: [29,null] 1`] = `[Error: unknown type: null]`;

exports[`statement statement safety net: [30,"comedy"] 1`] = `
"Statement for undefined
 Foo: $540.00 (30 seats)
Amount owed is $540.00
You earned 6 credits
"
`;

exports[`statement statement safety net: [30,"foo"] 1`] = `[Error: unknown type: foo]`;

exports[`statement statement safety net: [30,"tragedy"] 1`] = `
"Statement for undefined
 Foo: $400.00 (30 seats)
Amount owed is $400.00
You earned 0 credits
"
`;

exports[`statement statement safety net: [30,null] 1`] = `[Error: unknown type: null]`;

exports[`statement statement safety net: [31,"comedy"] 1`] = `
"Statement for undefined
 Foo: $548.00 (31 seats)
Amount owed is $548.00
You earned 7 credits
"
`;

exports[`statement statement safety net: [31,"foo"] 1`] = `[Error: unknown type: foo]`;

exports[`statement statement safety net: [31,"tragedy"] 1`] = `
"Statement for undefined
 Foo: $410.00 (31 seats)
Amount owed is $410.00
You earned 1 credits
"
`;

exports[`statement statement safety net: [31,null] 1`] = `[Error: unknown type: null]`;

exports[`statement statement safety net: [100,"comedy"] 1`] = `
"Statement for undefined
 Foo: $1,100.00 (100 seats)
Amount owed is $1,100.00
You earned 90 credits
"
`;

exports[`statement statement safety net: [100,"foo"] 1`] = `[Error: unknown type: foo]`;

exports[`statement statement safety net: [100,"tragedy"] 1`] = `
"Statement for undefined
 Foo: $1,100.00 (100 seats)
Amount owed is $1,100.00
You earned 70 credits
"
`;

exports[`statement statement safety net: [100,null] 1`] = `[Error: unknown type: null]`;

exports[`statement statement safety net: [null,"comedy"] 1`] = `
"Statement for undefined
Amount owed is $0.00
You earned 0 credits
"
`;

exports[`statement statement safety net: [null,"foo"] 1`] = `
"Statement for undefined
Amount owed is $0.00
You earned 0 credits
"
`;

exports[`statement statement safety net: [null,"tragedy"] 1`] = `
"Statement for undefined
Amount owed is $0.00
You earned 0 credits
"
`;

exports[`statement statement safety net: [null,null] 1`] = `
"Statement for undefined
Amount owed is $0.00
You earned 0 credits
"
`;
